--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CodePen - Ashfall</title>
+  <title>Team Page</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -15,10 +15,9 @@
 
 <body>
   <div class="imagecontainer">
-    <img src="dummy.jpg">
+    <img src="https://source.unsplash.com/1268x900/?team">
   </div>
 
-  <!-- partial:index.partial.html -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
   <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
@@ -177,8 +176,9 @@
       gl_FragColor = vec4(clamp(colour * 20., 0., 1.),1.0);
   }
 </script>
+<!-- here comes animated bg -->
   <div id="container" touch-action="none"></div>
-  <!-- partial -->
+
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/982762/ccapture.js'></script>
   <script src="./script.js"></script>
 
