glowing effect to our team added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
   <!-- team image -->
   <div class = "imagecontainer" >
       <img src="https://source.unsplash.com/1268x700/?team" class="grid-items">
-      <h1 class="grid-items">Our Team</h1>
+      <h1 class="grid-items">
+        <ul class="our-team">
+          <li>O</li>
+          <li>U</li>
+          <li>R</li>
+          <li> </li>
+          <li>T</li>
+          <li>E</li>
+          <li>A</li>
+          <li>M</li>
+
+        </ul>
+      </h1>
   </div>
 
   <!-- three.js -->
