team image and title

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <title>Team Page</title>
   <!-- linking css -->
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!-- team image -->
   <div class = "imagecontainer" >
-      <img src="https://source.unsplash.com/1268x700/?team" class="grid-items">
-      <h1 class="grid-items">
+      <h1 style="font-size: 100px;">
         <ul class="our-team">
           <li>O</li>
           <li>U</li>
@@ -30,7 +31,7 @@
   </div>
 
   <!-- three.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
   <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
         gl_Position = vec4( position, 1.0 );
@@ -187,7 +188,7 @@
 
       gl_FragColor = vec4(clamp(colour * 20., 0., 1.),1.0);
   }
-</script>
+</script> -->
 <!-- here comes animated bg -->
   <div class="teams-container">
     <div class="grid-items team">
