--- a/index.html
+++ b/index.html
@@ -194,7 +194,47 @@
     <div class="grid-items team">
       <h1>WebD Team</h1>
       <!-- here comes cards -->
+      <div class="card-section-webd container-fluid d-flex flex-wrap justify-content-around">
+      <div class="card m-3" style="width: 18rem;">
+        <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?pizza" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+        </div>
+      </div>
+      <div class="card m-3" style="width: 18rem;">
+        <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?icecream" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+        </div>
+      </div>
+      <div class="card m-3" style="width: 18rem;">
+        <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?drinks" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+        </div>
+      </div> 
+    </div>
       <h1>HR Team</h1>
+      <div class="card-section-hr container-fluid d-flex flex-wrap justify-content-around">
+        <div class="card m-3 gradient-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3 spiral-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div> 
+      </div>
       <h1>EM Team</h1>
     </div>
   <div id="container" class="grid-items" touch-action="none"></div>
