--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 <!-- here comes animated bg -->
   <div class="teams-container">
     <div class="grid-items team">
+      <!-- Website Team -->
       <h1>WebD Team</h1>
       <!-- here comes cards -->
       <div class="card-section-webd container-fluid d-flex flex-wrap justify-content-around">
@@ -214,6 +215,7 @@
         </div>
       </div> 
     </div>
+    <!-- HR Team -->
       <h1>HR Team</h1>
       <div class="card-section-hr container-fluid d-flex flex-wrap justify-content-around">
         <div class="card m-3 gradient-border" style="width: 18rem;">
@@ -235,7 +237,154 @@
           </div>
         </div> 
       </div>
+        <!-- PR Team -->
+        <h1>PR Team</h1>
+        <div class="card-section-pr container-fluid d-flex flex-wrap justify-content-around">
+          <div class="card m-3 gradient-border" style="width: 18rem;">
+            <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title text-center">Card title</h5>
+            </div>
+          </div>
+          <div class="card m-3 spiral-border" style="width: 18rem;">
+            <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title text-center">Card title</h5>
+            </div>
+          </div>
+        </div>
+            <!-- Sponsorship Team -->
+      <h1>Sponsorship Team</h1>
+      <div class="card-section-sponsi container-fluid d-flex flex-wrap justify-content-around">
+        <div class="card m-3 gradient-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div> 
+      </div>
+          <!-- Editorial Team -->
+          <h1>Editorial Team</h1>
+          <div class="card-section-edit container-fluid d-flex flex-wrap justify-content-around">
+            <div class="card m-3 gradient-border" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div>
+            <div class="card m-3 spiral-border" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div> 
+            <div class="card m-3" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?cars" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div> 
+          </div>
+              <!-- EM Team -->
       <h1>EM Team</h1>
+      <div class="card-section-em container-fluid d-flex flex-wrap justify-content-around">
+        <div class="card m-3 gradient-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3 spiral-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div> 
+      </div>
+          <!-- Creative Team -->
+          <h1>Creative Team</h1>
+          <div class="card-section-creative container-fluid d-flex flex-wrap justify-content-around">
+            <div class="card m-3 gradient-border" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div>
+            <div class="card m-3 spiral-border" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div> 
+          </div>
+              <!-- HR Team -->
+      <h1>HR Team</h1>
+      <div class="card-section-hr container-fluid d-flex flex-wrap justify-content-around">
+        <div class="card m-3 gradient-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3 spiral-border" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div>
+        <div class="card m-3" style="width: 18rem;">
+          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+          </div>
+        </div> 
+      </div>
+          <!-- Media Team -->
+          <h1>Media Team</h1>
+          <div class="card-section-media container-fluid d-flex flex-wrap justify-content-around">
+            <div class="card m-3 gradient-border" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div>
+            <div class="card m-3 spiral-border" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div>
+            <div class="card m-3" style="width: 18rem;">
+              <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+              </div>
+            </div> 
+          </div>
     </div>
   <div id="container" class="grid-items" touch-action="none"></div>
   </div>
