--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../assets/vendor/aos/dist/aos.css"> <!--CSS Link to AOS library-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"> <!--CSS Link to AOS library-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script> <!--JS link to AOS library-->
   </head>
 
   <body>
@@ -29,7 +31,7 @@
           <li>O</li>
           <li>U</li>
           <li>R</li>
-          <li></li>
+          <li>&nbsp;</li>
           <li>T</li>
           <li>E</li>
           <li>A</li>
@@ -206,37 +208,37 @@
         <div
           class="card-section-webd container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3" data-aos="fade-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="fade-up" 
               height="300px"
               src="https://source.unsplash.com/1268x700/?pizza"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
+            <div class="card-body" data-aos="fade-up">
+              <h5 class="card-title text-center" data-aos="fade-up">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3" data-aos="fade-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="fade-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?icecream"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
+            <div class="card-body" data-aos="fade-up">
+              <h5 class="card-title text-center" data-aos="fade-up">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3" data-aos="fade-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="fade-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?drinks"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
+            <div class="card-body" data-aos="fade-up">
+              <h5 class="card-title text-center" data-aos="fade-up">Card title</h5>
             </div>
           </div>
         </div>
@@ -245,48 +247,38 @@
         <div
           class="card-section-hr container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3  gradient-border"  data-aos="fade-right" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="fade-right"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
+            <div class="card-body" data-aos="fade-right">
+              <h5 class="card-title text-center" >Card title</h5>
             </div>
           </div>
-          <div class="card m-3 neon-animation-1" style="width: 18rem">
+          <div class="card m-3  neon-animation-1" data-aos="zoom-in-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-in-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?cookie"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
+            <div class="card-body" data-aos="zoom-in-up">
+              <h5 class="card-title text-center" >Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border neon-animation-2" style="width: 18rem">
+          <div class="card m-3  spiral-border neon-animation-2" data-aos="fade-left" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="fade-left"
+              style="z-index: -2;"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
-            </div>
-          </div>
-          <div class="card m-3" style="width: 18rem">
-            <img
-              class="card-img-top"
-              height="300px"
-              src="https://source.unsplash.com/1268x700/?mountain"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h5 class="card-title text-center">Card title</h5>
+            <div class="card-body" data-aos="fade-left">
+              <h5 class="card-title text-center" >Card title</h5>
             </div>
           </div>
         </div>
@@ -295,25 +287,25 @@
         <div
           class="card-section-pr container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="flip-right"   style="width: 18rem">
             <img
               class="card-img-top"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
-            />
-            <div class="card-body">
+            /> 
+            <div class="card-body" data-aos="flip-left"  >
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" style="width: 18rem">
+          <div class="card m-3 spiral-border neon-animation-2" data-aos="flip-left"   style="width: 18rem">
             <img
               class="card-img-top"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="flip-right"  >
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -323,25 +315,27 @@
         <div
           class="card-section-sponsi container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="zoom-in" style="width: 18rem">
             <img
               class="card-img-top"
+              data-aos="zoom-in"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-2" data-aos="zoom-in" style="width: 18rem">
             <img
               class="card-img-top"
+              data-aos="zoom-in"
               height="300px"
               src="https://source.unsplash.com/1268x700/?mountain"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -351,47 +345,50 @@
         <div
           class="card-section-edit container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="zoom-in-up" style="width: 18rem">
             <img
               class="card-img-top"
+              data-aos="zoom-in-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" style="width: 18rem">
+          <div class="card m-3 spiral-border" data-aos="zoom-in-up" style="width: 18rem">
             <img
               class="card-img-top"
+              data-aos="zoom-in-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-1" data-aos="zoom-in-up" style="width: 18rem">
             <img
               class="card-img-top"
+              data-aos="zoom-in-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?mountain"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-2" data-aos="zoom-in-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-in-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?cars"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -401,36 +398,36 @@
         <div
           class="card-section-em container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="zoom-in-right" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-in-right"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-right">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" style="width: 18rem">
+          <div class="card m-3 spiral-border" data-aos="zoom-in-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-in-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-2" data-aos="zoom-in-left" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-in-left"
               height="300px"
               src="https://source.unsplash.com/1268x700/?mountain"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-in-left">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -440,36 +437,36 @@
         <div
           class="card-section-creative container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="zoom-out" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" style="width: 18rem">
+          <div class="card m-3 spiral-border" data-aos="zoom-out" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-2" data-aos="zoom-out" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out"
               height="300px"
               src="https://source.unsplash.com/1268x700/?mountain"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -479,36 +476,36 @@
         <div
           class="card-section-hr container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="zoom-out-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" style="width: 18rem">
+          <div class="card m-3 spiral-border" data-aos="zoom-out-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out-up">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-2" data-aos="zoom-out-up" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out-up"
               height="300px"
               src="https://source.unsplash.com/1268x700/?mountain"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out-up" >
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -518,36 +515,36 @@
         <div
           class="card-section-media container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3 gradient-border" style="width: 18rem">
+          <div class="card m-3 gradient-border" data-aos="zoom-out-down" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out-down"
               height="300px"
               src="https://source.unsplash.com/1268x700/?coffee"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out-down">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" style="width: 18rem">
+          <div class="card m-3 spiral-border neon-animation-1" data-aos="zoom-out-down" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out-down"
               height="300px"
               src="https://source.unsplash.com/1268x700/?fruits"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out-down">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3" style="width: 18rem">
+          <div class="card m-3 neon-animation-2" data-aos="zoom-out-down" style="width: 18rem">
             <img
-              class="card-img-top"
+              class="card-img-top" data-aos="zoom-out-down"
               height="300px"
               src="https://source.unsplash.com/1268x700/?mountain"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" data-aos="zoom-out-down">
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
@@ -558,5 +555,6 @@
 
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/982762/ccapture.js"></script>
     <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script> <!--JS link to AOS library-->
   </body>
 </html>
