Added Scroll icon on team page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           <li>M</li>
         </ul>
       </h1>
+      <div class="scroll">
+        <p><b>Scroll Down</b></p>
+        <a href="#teams"><img src="/images/down-arrow (1).png" alt="img..."></a>
+      </div>
     </div>
 
     <!-- three.js -->
@@ -200,7 +204,7 @@
   }
 </script> -->
     <!-- here comes animated bg -->
-    <div class="teams-container" style="background-color: black;">
+    <div class="teams-container" id="teams" style="background-color: black;">
       <div class="grid-items team">
         <!-- Website Team -->
         <h1>WebD Team</h1>
