Added more border-animation for cards

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" data-aos="zoom-in-up" style="width: 18rem">
+          <div class="card m-3 animate-border" data-aos="zoom-in-up" style="width: 18rem">
             <img
               class="card-img-top"
               data-aos="zoom-in-up"
@@ -413,7 +413,7 @@
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" data-aos="zoom-in-up" style="width: 18rem">
+          <div class="card m-3 spiral-border neon-animation-1" data-aos="zoom-in-up" style="width: 18rem">
             <img
               class="card-img-top" data-aos="zoom-in-up"
               height="300px"
@@ -452,7 +452,7 @@
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" data-aos="zoom-out" style="width: 18rem">
+          <div class="card m-3 spiral-border neon-animation-1" data-aos="zoom-out" style="width: 18rem">
             <img
               class="card-img-top" data-aos="zoom-out"
               height="300px"
@@ -491,7 +491,7 @@
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border" data-aos="zoom-out-up" style="width: 18rem">
+          <div class="card m-3 spiral-border animate-border neon-animation-2" data-aos="zoom-out-up" style="width: 18rem"> <!--One way of hover and border(animate-border: for border, neon-animation-2: for hover effect)-->
             <img
               class="card-img-top" data-aos="zoom-out-up"
               height="300px"
@@ -530,7 +530,7 @@
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 spiral-border neon-animation-1" data-aos="zoom-out-down" style="width: 18rem">
+          <div class="card m-3 spiral-border animate-border" data-aos="zoom-out-down" style="width: 18rem">
             <img
               class="card-img-top" data-aos="zoom-out-down"
               height="300px"
@@ -541,7 +541,7 @@
               <h5 class="card-title text-center">Card title</h5>
             </div>
           </div>
-          <div class="card m-3 neon-animation-2" data-aos="zoom-out-down" style="width: 18rem">
+          <div class="card m-3 animate-border" data-aos="zoom-out-down" style="width: 18rem">
             <img
               class="card-img-top" data-aos="zoom-out-down"
               height="300px"
