Applied animation on the home team page

--- a/index.html
+++ b/index.html
@@ -204,6 +204,20 @@
   }
 </script> -->
     <!-- here comes animated bg -->
+    <div >
+      <ul class="circles">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+      </ul>
+</div >
     <div class="teams-container" id="teams" style="background-color: black;">
       <div class="grid-items team">
         <!-- Website Team -->
