chaned z-index of '.team' class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Team Page</title>
     <!-- linking css -->
     <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style2.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
