changed directory of image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="scroll flex-item-2">
         <p><b>Scroll Down</b></p>
         <a href="#teams"
-          ><img src="/images/down-arrow (1).png" alt="img..."
+          ><img src="images/down-arrow (1).png" alt="img..."
         /></a>
       </div>
     </div>
