some style changes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
           <div
             class="card m-3 spiral-border  "
-            data-aos="fade-left"
+            data-aos="fade-right"
             style="width: 15rem;height:21rem"
           >
             <img
