our team and canva background

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,8 +32,12 @@
   <body>
     <!-- team image -->
     <div class="imagecontainer">
-      <div class="flex-item-1">
-        <h1>
+      <div class="wrapper-heading">
+        <div class="header-wrap">
+          <h1 style="transform: perspective(200px) rotateX(10deg)">MEET<br>OUR TEAM</h1>
+        </div>
+      </div>
+      <!--<div class="flex-item-1">
           <ul class="our-team">
             <li class="wavy-font">O</li>
             <li class="wavy-font">U</li>
@@ -42,9 +47,14 @@
             <li class="minecraft-font">E</li>
             <li class="minecraft-font">A</li>
             <li class="minecraft-font">M</li>
-          </ul>
-        </h1>
+          </ul> 
       </div>
+    !-->
+
+      <br>
+      <br>
+      <br>
+
     </div>
     <div>
       <ul class="circles">
@@ -60,6 +70,9 @@
         <li></li>
       </ul>
     </div>
+
+
+
     <!-- <canvas id=a  style=background:#fff></canvas> -->
     <div class="teams-container" id="teams">
       <div class="grid-items team">
