Added start button to team page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
           <h1 style="transform: perspective(200px) rotateX(10deg)">MEET<br>OUR TEAM</h1>
         </div>
       </div>
+
+      <div id="start-btn-wrap">
+        <a href="#teams" id="start-btn">START</a>
+      </div>
       <!--<div class="flex-item-1">
           <ul class="our-team">
             <li class="wavy-font">O</li>
