--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
       </div>
 
-      <div id="start-btn-wrap">
-        <a href="#teams" id="start-btn">START</a>
-      </div>
+      <button id="start-btn-wrap">
+        <a href="#" id="start-btn">START</a>
+      </button>
       <!--<div class="flex-item-1">
           <ul class="our-team">
             <li class="wavy-font">O</li>
