added hover effect on start button and scroll effect on clicking start button

--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
      <!--JS link to AOS library-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
   </head>
 
   <body>
     <!-- team image -->
-    <div class="imagecontainer">
+    <div class="team-home imagecontainer">
       <div class="wrapper-heading">
         <div class="header-wrap">
           <h1 style="transform: perspective(200px) rotateX(10deg)">MEET<br>OUR TEAM</h1>
@@ -85,7 +88,7 @@
         <h1>WebD Team</h1>
         <!-- here comes cards -->
         <div
-          class="card-team card-section-webd container-fluid d-flex flex-wrap justify-content-around"
+          class="card-team card-section-webd container-fluid d-flex flex-wrap justify-content-around" 
         >
           <div class="card m-3 " data-aos="fade-up" style=" width: 15rem;height:21rem;">
             <img
