changed letter spacing and line spacing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="imagecontainer">
       <div class="wrapper-heading">
         <div class="header-wrap">
-          <h1 style="transform: perspective(200px) rotateX(10deg)">MEET<br>OUR TEAM</h1>
+          <h1 style="transform: perspective(200px) rotateX(10deg)">MEET<br><br>OUR TEAM</h1>
         </div>
       </div>
 
