--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
           <h1 style="transform: perspective(200px) rotateX(10deg)">MEET<br>OUR TEAM</h1>
         </div>
       </div>
+
+      <p>
+        <button class="btn btn-cta btn-cta__green text-uppercase trigger" data-toggle="closed">View portfolio</button>
+      </p>
+
       <!--<div class="flex-item-1">
           <ul class="our-team">
             <li class="wavy-font">O</li>
@@ -50,10 +55,6 @@
           </ul> 
       </div>
     !-->
-
-      <br>
-      <br>
-      <br>
 
     </div>
     <div>
