--- a/index.html
+++ b/index.html
@@ -52,238 +52,164 @@
     <div class="grid-items team">
       <!-- Website Team -->
 
-      <h1>WebD Team</h1>
+      <h1 class="mx-2">Website Team</h1>
       <!-- here comes cards -->
       <div class="card-team card-section-webd container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 " style=" width: 15rem;height:21rem;">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?pizza"
+        <div class="card m-3 " style=" width: 15rem;height:25rem;">
+          <img class="card-img-top " height="300px" src="img/Team Members/webD/Aditi Kesarwani.jpeg"
             alt="Card image cap" />
           <div class="card-body">
             <h5 class="card-title text-center minecraft-font">
-              Card title
+              ADITI Kesarwani
             </h5>
           </div>
         </div>
-        <div class="card m-3" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?icecream"
+        <div class="card m-3" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/webD/Himani Khurana.jpeg"
             alt="Card image cap" />
           <div class="card-body">
             <h5 class="card-title text-center minecraft-font">
-              Card title
-            </h5>
-          </div>
-        </div>
-        <div class="card m-3" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?drinks"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">
-              Card title
+              HIMANI Khurana
             </h5>
           </div>
         </div>
       </div>
       <!-- HR Team -->
 
-      <h1>HR Team</h1>
+      <h1 class="mx-2">HR & Logistics Team</h1>
       <div class="card-team card-section-hr container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/HR & Logistics/Ayushi.JPG"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">AYUSHI</h5>
           </div>
         </div>
-        <div class="card m-3 " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?cookie"
+        <div class="card m-3 " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/HR & Logistics/HANSI.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">HANSI</h5>
           </div>
         </div>
-        <div class="card m-3 spiral-border " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
-            alt="Card image cap" />
-          <!-- style="z-index: -2" -->
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
+        
       </div>
       <!-- PR Team -->
 
-      <h1>PR Team</h1>
+      <h1 class="mx-2">PR Media & Security Team</h1>
       <div class="card-team card-section-pr container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/PR, Media & Security Team/Akanksha Rani.png"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">AKANSHA Rani</h5>
           </div>
         </div>
-        <div class="card m-3 spiral-border  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
+        <div class="card m-3 spiral-border  " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/PR, Media & Security Team/Sakshi.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">SAKSHI</h5>
+          </div>
+        </div>
+        <div class="card m-3 spiral-border  " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/PR, Media & Security Team/Tanya Dwivedi_.jpg"
+            alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title text-center minecraft-font">TANYA Dwivedi</h5>
+          </div>
+        </div>
+        <div class="card m-3 spiral-border  " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/PR, Media & Security Team/Twisha Kaul_.png"
+            alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title text-center minecraft-font">TWISHA Kaul</h5>
           </div>
         </div>
       </div>
       <!-- Sponsorship Team -->
 
-      <h1>Sponsorship Team</h1>
+      <h1 class="mx-2">Sponsorship Team</h1>
       <div class="card-team card-section-sponsi container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
-            alt="Card image cap" />
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Sponsorship/Kashish Bansal.JPG"  alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">KASHISH Bansal</h5>
           </div>
         </div>
-        <div class="card m-3  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
+        
       </div>
       <!-- Editorial Team -->
 
-      <h1>Editorial Team</h1>
+      <h1 class="mx-2">Editorial Team</h1>
       <div class="card-team card-section-edit container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Editorial/Shubhangi.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3 animate-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3 " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?cars"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">SHUBHANGI</h5>
           </div>
         </div>
       </div>
       <!-- EM Team -->
 
-      <h1>EM Team</h1>
+      <h1 class="mx-2">EM Team</h1>
       <div class="card-team card-section-em container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Event Management/Sara.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3 spiral-border " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">SARA</h5>
           </div>
         </div>
       </div>
       <!-- Creative Team -->
 
-      <h1>Creative Team</h1>
+      <h1 class="mx-2">Creative Team</h1>
       <div class="card-team card-section-creative container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Creative/Aanya Singh.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">AANYA Singh</h5>
           </div>
         </div>
-        <div class="card m-3 spiral-border " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
+        <div class="card m-3 gradient-border" style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Creative/Anushka Gupta.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">ANUSHKA Gupta</h5>
           </div>
         </div>
-        <div class="card m-3  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain"
+        <div class="card m-3 spiral-border " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Creative/Komal Kushwaha .jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">KOMAL Kushwaha</h5>
           </div>
         </div>
-      </div>
-      <!-- HR Team -->
-
-      <h1>HR Team</h1>
-      <div class="card-team card-section-hr container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
+        <div class="card m-3  " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Creative/Mahi Dhiman .jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">MAHI Dhiman</h5>
           </div>
         </div>
-        <div class="card m-3 spiral-border animate-border  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
+        <div class="card m-3  " style="width: 16rem;height:26rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Creative/Manvi Yaduvanshi.jpg"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">MANVI Yaduvanshi</h5>
           </div>
         </div>
-        <div class="card m-3  " style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain"
+        <div class="card m-3  " style="width: 15rem;height:25rem">
+          <img class="card-img-top" height="300px" src="img/Team Members/Creative/Yashaswi Gupta.png"
             alt="Card image cap" />
           <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
+            <h5 class="card-title text-center minecraft-font">YASHASWI Gupta</h5>
           </div>
         </div>
       </div>
-      <!-- Media Team -->
-
-      <h1>Media Team</h1>
-      <div class="card-team card-section-media container-fluid d-flex flex-wrap justify-content-around">
-        <div class="card m-3 gradient-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?coffee"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3 spiral-border animate-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?fruits"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
-        <div class="card m-3 animate-border" style="width: 15rem;height:21rem">
-          <img class="card-img-top" height="300px" src="https://source.unsplash.com/1268x700/?mountain"
-            alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title text-center minecraft-font">Card title</h5>
-          </div>
-        </div>
       </div>
     </div>
     <div id="container" class="grid-items" touch-action="none"></div>
